--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "framer-motion": "^11.11.4",
     "lucide-react": "^0.330.0",
     "next": "14.2.10",
